@startuml
class Edificio {
    -vida
    -ubicacion: Casillero
    + {abstract} pasarTurno()
    + {abstract} recibirDaño(daño)

    + destruir()
}

class EdificioConcreto{
 + {abstract} construir(Billetera, Casillero)
}

class EdificioEnConstruccion {
    - vaASer: Edificio
    - turnosRestantes
    + pasarTurno()
}

class EdificioProto {
    - escudo
    - estadoEnergetico
    + recibirDaño(daño)
    + pasarTurno()
    '+ estaActivo()'
    '+ setEstadoEnergetico(estado)'
}

class EdificioZerg {
    + pasarTurno()
}

class Criadero {
 + engendrarZangano()
}

class ReservaDeReproduccion {}

class Extractor {
 + agregarZangano()
 + extraerGas()
}

class Guarida {}

class Espiral {}

Criadero -|>  EdificioZerg
EdificioZerg <|- ReservaDeReproduccion
EdificioZerg <|-- Extractor
EdificioZerg <|-- Guarida
EdificioZerg <|-- Espiral

class NexoMineral {}

class Pilon {}

class Asimilador {}

class Acceso {}

class PuertoEstelar {}

NexoMineral -|> EdificioProto
EdificioProto <|- Pilon
EdificioProto <|-- Asimilador
EdificioProto <|-- Acceso
EdificioProto <|-- PuertoEstelar

Edificio <|... EdificioConcreto
Edificio <|... EdificioEnConstruccion
EdificioConcreto<|... EdificioZerg
EdificioConcreto<|... EdificioProto
@enduml